After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721324 - Error message is printed to stdout
Error message is printed to stdout
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
unspecified
Other All
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-01-02 05:57 UTC by sworddragon2
Modified: 2014-01-02 15:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GDBusConnection: don't write to stdout (1.44 KB, patch)
2014-01-02 06:39 UTC, Allison Karlitskaya (desrt)
none Details | Review
GDBusConnection: don't write to stdout (2.15 KB, patch)
2014-01-02 06:49 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description sworddragon2 2014-01-02 05:57:25 UTC
On testing some things with dbus and dconf I'm sometimes seeing this message: "g_dbus_connection_real_closed: Remote peer vanished with error: Underlying GIOStream returned 0 bytes on an async read (g-io-error-quark, 0). Exiting."

The message itself is not the problem as I know the cause but I'm noticing it is printed to stdout. But shouldn't this message go to stderr?
Comment 1 Allison Karlitskaya (desrt) 2014-01-02 06:36:32 UTC
-> gdbus

For some reason it's using g_print()...
Comment 2 Allison Karlitskaya (desrt) 2014-01-02 06:39:34 UTC
Created attachment 265123 [details] [review]
GDBusConnection: don't write to stdout

When losing the D-Bus connection, we would write to stdout about it just
before killing ourselves with SIGTERM.  We're a library, so we should
probably use stderr instead.
Comment 3 Allison Karlitskaya (desrt) 2014-01-02 06:49:49 UTC
Created attachment 265124 [details] [review]
GDBusConnection: don't write to stdout

When losing the D-Bus connection, we would write to stdout about it just
before killing ourselves with SIGTERM.  We're a library, so we should
probably use stderr instead.



There was a testcase that verified that the message was written to
stdout.  Modify that to check stderr instead.
Comment 4 Colin Walters 2014-01-02 13:32:25 UTC
Review of attachment 265124 [details] [review]:

Ok.  (I quite dislike this printing code since it happens in completely normal situations like logging in via gdm, but that's a separate bug)
Comment 5 Allison Karlitskaya (desrt) 2014-01-02 15:09:11 UTC
Attachment 265124 [details] pushed as 51b3dd7 - GDBusConnection: don't write to stdout