gio/gdbusconnection.c
@@ -799,14 +799,14 @@ g_dbus_connection_real_closed (GDBusConnection *connection,
     {
       if (error != NULL)
         {
-          g_print ("%s: Remote peer vanished with error: %s (%s, %d). Exiting.\n",
-                   G_STRFUNC,
-                   error->message,
-                   g_quark_to_string (error->domain), error->code);
+          g_printerr ("%s: Remote peer vanished with error: %s (%s, %d). Exiting.\n",
+                      G_STRFUNC,
+                      error->message,
+                      g_quark_to_string (error->domain), error->code);
         }
       else
         {
-          g_print ("%s: Remote peer vanished. Exiting.\n", G_STRFUNC);
+          g_printerr ("%s: Remote peer vanished. Exiting.\n", G_STRFUNC);
         }
       raise (SIGTERM);
     }
